--- a/symfony-docker-main/templates/public/index.html.twig
+++ b/symfony-docker-main/templates/public/index.html.twig
@@ -1,20 +1,17 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Hello PublicController!{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/home.css') }}">
+{% endblock %}
+{% block title %}Bienvenue dans la Forêt{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/app/src/Controller/PublicController.php'|file_link(0) }}">src/Controller/PublicController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/app/templates/public/index.html.twig'|file_link(0) }}">templates/public/index.html.twig</a></code></li>
-    </ul>
+<div class="content">
+    <h1>Bienvenue 🌳</h1>
+    <p>Découvrez les plus beaux endroits de France.</p>
+</div>
+<div class="article-list">
+    {% include 'article/index.html.twig' %}
 </div>
 {% endblock %}
