--- a/symfony-docker-main/templates/base.html.twig
+++ b/symfony-docker-main/templates/base.html.twig
@@ -6,29 +6,36 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text.css">
     <link href="{{ asset('css/styles.css') }}" rel="stylesheet">
 </head>
 <body>
 <header style="background-image: url('/images/home-bg.jpg');">
     <div class="container position-relative px-4 px-lg-5">
-        <div class="row justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
+        <div class="row justify-content-between align-items-center">
+            <div class="col-md-6">
                 <div class="site-heading">
                     {% block header %}
                         <h1>Découvrir la France</h1>
                         <span class="subheading">Explorez les merveilles de la France</span>
-                        {% if is_granted('ROLE_ADMIN') %}
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ path('admin') }}">Admin</a></li>
-                        {% endif %}
-
-                        {% if app.user %}
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ path('app_logout') }}">Déconnexion</a></li>
-                        {% else %}
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{ path('app_login') }}">Connexion</a></li>
-                        {% endif %}
                     {% endblock %}
                 </div>
+            </div>
+            <div class="col-md-6 text-end">
+                <ul class="list-inline">
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="list-inline-item"><a class="nav-link" href="{{ path('admin') }}">Admin</a></li>
+                    {% endif %}
+                    {% if app.user %}
+                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_change_password') }}">Changer le mot de passe</a></li>
+                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a></li>
+                    {% else %}
+                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_login') }}">Connexion</a></li>
+                    {% endif %}
+                    {% if app.request.attributes.get('_route') != 'app_home' %}
+                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_article_index') }}">Accueil</a></li>
+                    {% endif %}
+                </ul>
             </div>
         </div>
     </div>
