--- a/symfony-docker-main/templates/base.html.twig
+++ b/symfony-docker-main/templates/base.html.twig
@@ -31,7 +31,9 @@
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a></li>
                     {% else %}
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('app_login') }}">Connexion</a></li>
+
                     {% endif %}
+                    <li class="list-inline-item"><a class="nav-link" href="{{ path('app_article_perso') }}">Mes posts</a></li>
                     {% if app.request.attributes.get('_route') != 'app_home' %}
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('app_article_index') }}">Accueil</a></li>
                     {% endif %}
