--- a/symfony-docker-main/templates/registration/register.html.twig
+++ b/symfony-docker-main/templates/registration/register.html.twig
@@ -6,30 +6,33 @@
     <h1>Register</h1>
 
     {{ form_errors(registrationForm) }}
-
     <div class="custom-form">
         {{ form_start(registrationForm, {'attr': {'class': 'custom-form-class'}}) }}
         <div class="form-group">
             {{ form_row(registrationForm.email, {'attr': {'class': 'custom-input'}}) }}
         </div>
         <div class="form-group">
-            {{ form_row(registrationForm.plainPassword, {
+            {{ form_row(registrationForm.plainPassword.first, {
                 'label': 'Password',
                 'attr': {'class': 'custom-input'}
             }) }}
         </div>
         <div class="form-group">
+            {{ form_row(registrationForm.plainPassword.second, {
+                'label': 'Repeat Password',
+                'attr': {'class': 'custom-input'}
+            }) }}
+        </div>
+        <div class="form-group">
             {{ form_row(registrationForm.name, {
-            'label': 'Name',
-            'attr': {'class': 'custom-input'}
+                'label': 'Name',
+                'attr': {'class': 'custom-input'}
             }) }}
         </div>
         <div class="form-group">
             {{ form_row(registrationForm.agreeTerms, {'label_attr': {'class': 'custom-label'}}) }}
         </div>
-
         <button type="submit" class="btn btn-primary">Register</button>
         {{ form_end(registrationForm) }}
     </div>
 {% endblock %}
-
