--- a/symfony-docker-main/templates/security/change_password.html.twig
+++ b/symfony-docker-main/templates/security/change_password.html.twig
@@ -1,12 +1,30 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Changer le mot de passe{% endblock %}
-{% block body %}
-    <h1>Changer le mot de passe</h1>
 
-    {{ form_start(form) }}
-    {{ form_row(form.oldPassword) }}
-    {{ form_row(form.newPassword) }}
-    <button type="submit">Changer le mot de passe</button>
-    {{ form_end(form) }}
+{% block body %}
+    <div class="custom-form">
+        <h1>Changer le mot de passe</h1>
+
+        {{ form_start(form, {'attr': {'class': 'custom-form-class'}}) }}
+
+        <div class="form-group">
+            {{ form_label(form.oldPassword, 'Ancien mot de passe', {'label_attr': {'class': 'custom-label'}}) }}
+            {{ form_widget(form.oldPassword, {'attr': {'class': 'custom-input'}}) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.newPassword.first, 'Nouveau mot de passe', {'label_attr': {'class': 'custom-label'}}) }}
+            {{ form_widget(form.newPassword.first, {'attr': {'class': 'custom-input'}}) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.newPassword.second, 'Confirmez le nouveau mot de passe', {'label_attr': {'class': 'custom-label'}}) }}
+            {{ form_widget(form.newPassword.second, {'attr': {'class': 'custom-input'}}) }}
+        </div>
+
+        <button type="submit" class="btn btn-primary">Changer le mot de passe</button>
+
+        {{ form_end(form) }}
+    </div>
 {% endblock %}
