--- a/symfony-docker-main/templates/base.html.twig
+++ b/symfony-docker-main/templates/base.html.twig
@@ -12,38 +12,35 @@
 <body>
 <header style="background-image: url('/images/home-bg.jpg');">
     <div class="container position-relative px-4 px-lg-5">
-        <div class="row justify-content-between align-items-center">
+        <div class="row justify-content-end align-items-center">
             <div class="col-md-6">
-                <div class="site-heading">
-                    {% block header %}
-                        <h1>Découvrir la France</h1>
-                        <span class="subheading">Explorez les merveilles de la France</span>
-                    {% endblock %}
-                </div>
-            </div>
-            <div class="col-md-6 text-end">
-                <ul class="list-inline">
+                <ul class="list-inline" style="text-align: right;">
                     {% if is_granted('ROLE_ADMIN') %}
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('admin') }}">Admin</a></li>
                     {% endif %}
                     {% if app.user %}
-                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_change_password') }}">Changer le mot de passe</a></li>
+                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_change_password') }}">Mot de passe</a></li>
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a></li>
-                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_article_perso') }}">Mes posts</a></li>
+                        {% if userArticles is not empty %}
+                            <li class="list-inline-item"><a class="nav-link" href="{{ path('app_article_perso') }}">Mes posts</a></li>
+                        {% endif %}
                     {% else %}
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('app_login') }}">Connexion</a></li>
-
                     {% endif %}
                     {% if app.request.attributes.get('_route') != 'app_home' %}
-                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_article_index') }}">Accueil</a></li>
+                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_home') }}">Accueil</a></li>
                     {% endif %}
                 </ul>
+
             </div>
         </div>
     </div>
 </header>
 
+
+
 <div class="container px-4 px-lg-5">
+
     {% block body %}{% endblock %}
 </div>
 
