--- a/symfony-docker-main/templates/base.html.twig
+++ b/symfony-docker-main/templates/base.html.twig
@@ -21,8 +21,8 @@
                     {% if app.user %}
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('app_change_password') }}">Mot de passe</a></li>
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a></li>
-                        {% if userArticles is not empty %}
-                            <li class="list-inline-item"><a class="nav-link" href="{{ path('app_article_perso') }}">Mes posts</a></li>
+                        {% if userArticles is not empty and app.request.attributes.get('_route') != 'app_article_perso' %}
+                            <li class="list-inline-item"><a class="nav-link" href="{{ path('app_article_perso') }}" target="_self">Mes posts</a></li>
                         {% endif %}
                     {% else %}
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('app_login') }}">Connexion</a></li>
