--- a/symfony-docker-main/templates/base.html.twig
+++ b/symfony-docker-main/templates/base.html.twig
@@ -26,6 +26,7 @@
                         {% endif %}
                     {% else %}
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('app_login') }}">Connexion</a></li>
+                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_register') }}">Créer un compte</a></li>
                     {% endif %}
                     {% if app.request.attributes.get('_route') != 'app_home' %}
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('app_home') }}">Accueil</a></li>
