--- a/symfony-docker-main/templates/article/_form.html.twig
+++ b/symfony-docker-main/templates/article/_form.html.twig
@@ -11,11 +11,12 @@
         {{ form_widget(form.department, {'attr': {'class': 'custom-select'}}) }}
     </div>
     <div class="form-group">
-        {{ form_label(form.image, 'Image (JPG, JPEG, or PNG file)', {'label_attr': {'class': 'custom-label'}}) }}
-        {{ form_widget(form.image, {'attr': {'class': 'custom-file-input'}}) }}
-
-        <span class="d-none">Aucun fichier sélectionné</span>
+        {{ form_label(form.image, 'Image (JPG, JPEG, ou PNG)', {'label_attr': {'class': 'custom-label'}}) }}
+        <div class="custom-file">
+            {{ form_widget(form.image, {'attr': {'class': 'custom-file-input'}}) }}
+            <span class="d-none">Aucun fichier</span>
+        </div>
     </div>
+    <button class="btn btn-primary">{{ button_label|default('Sauvegarder') }}</button>
 </div>
-<button class="btn btn-primary">{{ button_label|default('Sauvegarder') }}</button>
 {{ form_end(form) }}
