--- a/symfony-docker-main/templates/article/edit.html.twig
+++ b/symfony-docker-main/templates/article/edit.html.twig
@@ -3,14 +3,22 @@
 {% block title %}Modification d'Article{% endblock %}
 
 {% block body %}
-    <h1>Modification d'Article</h1>
+    <div class="container">
+        <div class="text-center">
+            <h1>Modification de l'article</h1>
+        </div>
 
-    {% if article.image %}
-        <img src="{{ asset('images/' ~ article.image.filename) }}" alt="Image de l'article" class="card-img-top">
-    {% endif %}
-    {{ include('article/_form.html.twig', {'button_label': 'Modifier'}) }}
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                {{ include('article/_form.html.twig', {'button_label': 'Modifier'}) }}
+            </div>
+        </div>
 
-    <a href="{{ path('app_article_index') }}" class="btn btn-primary">Retour à la liste</a>
-
-    {{ include('article/_delete_form.html.twig') }}
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <a href="{{ path('app_article_index') }}" class="btn btn-primary">Retour à la liste</a>
+                {{ include('article/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
