--- a/symfony-docker-main/templates/article/index.html.twig
+++ b/symfony-docker-main/templates/article/index.html.twig
@@ -26,7 +26,7 @@
 
         <div class="row">
             {% for article in pagination %}
-                {% if article.isValidated and article.department.id == selectedDepartment or selectedDepartment == null %}
+                {% if article.isValidated == true and (article.department.id == selectedDepartment or selectedDepartment == null) %}
                     <div class="col-md-12 mb-6">
                         <div class="card">
                             <h5 class="card-title mb-6">{{ article.titre }}</h5>
@@ -38,7 +38,7 @@
                                         {% endif %}
                                     </div>
                                     <div class="col-md-6">
-                                        <p class="card-text">{{ article.contenu }}</p>
+                                        <p class="card-text">{{ article.contenu|slice(0, 200) }}{% if article.contenu|length > 200 %}...{% endif %}</p>
                                     </div>
                                 </div>
                             </div>
