--- a/symfony-docker-main/templates/article/show.html.twig
+++ b/symfony-docker-main/templates/article/show.html.twig
@@ -23,16 +23,19 @@
 
         {{ form_start(comment_form, {'action': path('app_comment_new', {'articleId': article.id}), 'method': 'POST', 'attr': {'class': 'custom-form-class'}}) }}
 
-        <div class="form-group">
-            {{ form_row(comment_form.content, {'attr': {'class': 'custom-input'}}) }}
-        </div>
 
-        <button type="submit" class="btn btn-primary">Ajouter un commentaire</button>
 
-        {{ form_end(comment_form) }}
 
         <a href="{{ path('app_article_perso') }}" class="btn btn-primary">Retour à la liste</a>
-        <a href="{{ path('app_article_edit', {'id': article.id}) }}" class="btn btn-success">Éditer</a>
-        <a href="{{ path('app_article_delete', {'id': article.id}) }}" class="btn btn-danger">Supprimer</a>
+        {% if app.user %}
+            <div class="form-group">
+                {{ form_row(comment_form.content, {'attr': {'class': 'custom-input'}}) }}
+            </div>
+            <button type="submit" class="btn btn-primary">Ajouter un commentaire</button>
+
+            {{ form_end(comment_form) }}
+            <a href="{{ path('app_article_edit', {'id': article.id}) }}" class="btn btn-success">Éditer</a>
+            {{ include('article/_delete_form.html.twig') }}
+        {% endif %}
     </div>
 {% endblock %}
