--- a/symfony-docker-main/templates/base.html.twig
+++ b/symfony-docker-main/templates/base.html.twig
@@ -27,8 +27,12 @@
                             {% endif %}
                         {% endif %}
                     {% else %}
-                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_login') }}">Connexion</a></li>
-                        <li class="list-inline-item"><a class="nav-link" href="{{ path('app_register') }}">Créer un compte</a></li>
+                        {% if app.request.attributes.get('_route') != 'app_login' %}
+                            <li class="list-inline-item"><a class="nav-link" href="{{ path('app_login') }}">Connexion</a></li>
+                        {% endif %}
+                        {% if app.request.attributes.get('_route') != 'app_register' %}
+                            <li class="list-inline-item"><a class="nav-link" href="{{ path('app_register') }}">Créer un compte</a></li>
+                        {% endif %}
                     {% endif %}
                     {% if app.request.attributes.get('_route') != 'app_home' %}
                         <li class="list-inline-item"><a class="nav-link" href="{{ path('app_home') }}">Accueil</a></li>
@@ -51,32 +55,6 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <ul class="list-inline text-center">
-                    <li class="list-inline-item">
-                        <a href="#!">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                                </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#!">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fas fa.circle fa-stack-2x"></i>
-                                    <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#!">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                                </span>
-                        </a>
-                    </li>
-                </ul>
                 <div class="small text-center text-muted fst-italic">Samuel Pouyade &copy; 2023</div>
             </div>
         </div>
