--- a/symfony-docker-main/templates/registration/register.html.twig
+++ b/symfony-docker-main/templates/registration/register.html.twig
@@ -3,36 +3,44 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-<h1>Register</h1>
+    <div class="text-center">
+        <h1>S'enregistrer</h1>
 
-    {{ form_errors(registrationForm) }}
-    <div class="custom-form">
-        {{ form_start(registrationForm, {'attr': {'class': 'custom-form-class'}}) }}
-        <div class="form-group">
-            {{ form_row(registrationForm.email, {'attr': {'class': 'custom-input'}}) }}
-        </div>
-        <div class="form-group">
-            {{ form_row(registrationForm.plainPassword.first, {
-                'label': 'Password',
-                'attr': {'class': 'custom-input'}
-            }) }}
-        </div>
-        <div class="form-group">
-            {{ form_row(registrationForm.plainPassword.second, {
-                'label': 'Repeat Password',
-                'attr': {'class': 'custom-input'}
-            }) }}
-        </div>
-        <div class="form-group">
-            {{ form_row(registrationForm.name, {
-                'label': 'Name',
-                'attr': {'class': 'custom-input'}
-            }) }}
-        </div>
-        <div class="form-group">
-            {{ form_row(registrationForm.agreeTerms, {'label_attr': {'class': 'custom-label'}}) }}
-        </div>
-        <button type="submit" class="btn btn-primary">Register</button>
-        {{ form_end(registrationForm) }}
+            {{ form_errors(registrationForm) }}
+            <div class="custom-form">
+                {{ form_start(registrationForm, {'attr': {'class': 'custom-form-class'}}) }}
+                <div class="form-group">
+                    {{ form_row(registrationForm.firstName, {
+                        'label': 'Prénom',
+                        'attr': {'class': 'custom-input'}
+                    }) }}
+                </div>
+                <div class="form-group">
+                    {{ form_row(registrationForm.lastName, {
+                        'label': 'Nom',
+                        'attr': {'class': 'custom-input'}
+                    }) }}
+                </div>
+                <div class="form-group">
+                    {{ form_row(registrationForm.email, {'attr': {'class': 'custom-input'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_row(registrationForm.plainPassword.first, {
+                        'label': 'Mot de passe',
+                        'attr': {'class': 'custom-input'}
+                    }) }}
+                </div>
+                <div class="form-group">
+                    {{ form_row(registrationForm.plainPassword.second, {
+                        'label': 'Répétez votre mot de passe',
+                        'attr': {'class': 'custom-input'}
+                    }) }}
+                </div>
+                <div class="form-group">
+                    {{ form_row(registrationForm.agreeTerms, {'label_attr': {'class': 'custom-label'}}) }}
+                </div>
+                <button type="submit" class="btn btn-primary">Register</button>
+                {{ form_end(registrationForm) }}
+            </div>
     </div>
 {% endblock %}
